--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </script>
 <div class="wicked-bar">
   <div class="wicked-bar-header">
-    This domain is currently under the management of Wicked Acquisitions Group LLC.
+    This domain is currently under the management of Wicked Acquisitions Group LLC. info@wickedacquisitions.com
   </div>
   <div class="wicked-bar-footer">
     Wicked Acquisitions Group LLC is an independent entity and is not affiliated with Atwater Brewery.
